force-app/main/default/objects/Experience_Enhancer_Configuration__c/Experience_Enhancer_Configuration__c.object-meta.xml
<CustomObject>
    <label>Experience Enhancer Configuration</label>
    <nameField>
        <label>EEC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experience Enhancer Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>