force-app/main/default/objects/Experience_Enhancer_Configuration__c/fields/Icon_URL__c.field-meta.xml
<CustomField>
    <fullName>Icon_URL__c</fullName>
    <inlineHelpText>Use the relative URL of the image stored in any static resource. The relative URL shouldn&apos;t start with a / symbol. URL Format: STATIC_RESOURCE_NAME/[Folder1/.../FolderN/]IMAGE_NAME.IMAGE_EXTENSION</inlineHelpText>
    <label>Icon URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>