force-app/main/default/objects/Experience_Enhancer_Configuration__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <formula>&apos;Level &apos; +
IF(
    Parent_EEC__r.Parent_EEC__r.Parent_EEC__r.Parent_EEC__r.Parent_EEC__c != null &amp;&amp;
    Parent_EEC__r.Parent_EEC__r.Parent_EEC__r.Parent_EEC__r.Parent_EEC__r.Parent_EEC__c == null,
    &apos;5&apos;,
    IF(
        Parent_EEC__r.Parent_EEC__r.Parent_EEC__r.Parent_EEC__c != null &amp;&amp;
        Parent_EEC__r.Parent_EEC__r.Parent_EEC__r.Parent_EEC__r.Parent_EEC__c == null,
        &apos;4&apos;,
        IF(
            Parent_EEC__r.Parent_EEC__r.Parent_EEC__c != null &amp;&amp;
            Parent_EEC__r.Parent_EEC__r.Parent_EEC__r.Parent_EEC__c == null,
            &apos;3&apos;,
            IF(
                Parent_EEC__r.Parent_EEC__c != null &amp;&amp;
                Parent_EEC__r.Parent_EEC__r.Parent_EEC__c == null,
                &apos;2&apos;,
                IF(
                    Parent_EEC__c != null &amp;&amp;
                    Parent_EEC__r.Parent_EEC__c == null,
                    &apos;1&apos;,
                    &apos;0&apos;
                )
            )
        )
    )
)</formula>
    <inlineHelpText>Depicts the level of record. Level 0 means topmost-level record.</inlineHelpText>
    <label>Level</label>
    <type>Text</type>
</CustomField>