force-app/main/default/objects/Experience_Enhancer_Configuration__c/fields/Parent_EEC__c.field-meta.xml
<CustomField>
    <fullName>Parent_EEC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent EEC</label>
    <referenceTo>Experience_Enhancer_Configuration__c</referenceTo>
    <relationshipLabel>Related Configurations</relationshipLabel>
    <relationshipName>Related_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>