force-app/main/default/objects/Experience_Enhancer_Configuration__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <inlineHelpText>URL of the webpage you want this item to redirect to on being clicked. This can be any external URL(e.g. google.com) or a relative URL to a specific community page(e.g. /contactsupport). The relative URL must begin with a / symbol.

You may keep it blank if you plan to have sub-menu items under this record.

Use only / if you want to redirect to the home page.</inlineHelpText>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>