force-app/main/default/objects/Experience_Enhancer_Configuration__c/recordTypes/Main_Navigation.recordType-meta.xml
<RecordType>
    <fullName>Main_Navigation</fullName>
    <active>true</active>
    <label>Main Navigation</label>
</RecordType>