force-app/main/default/objects/Experience_Enhancer_Configuration__c/recordTypes/Main_Navigation_Item.recordType-meta.xml
<RecordType>
    <fullName>Main_Navigation_Item</fullName>
    <active>true</active>
    <label>Main Navigation Item</label>
</RecordType>