force-app/main/default/objects/Experience_Enhancer_Configuration__c/recordTypes/Social_Navigation.recordType-meta.xml
<RecordType>
    <fullName>Social_Navigation</fullName>
    <active>true</active>
    <label>Social Navigation</label>
</RecordType>