force-app/main/default/objects/Experience_Enhancer_Configuration__c/recordTypes/Social_Navigation_Item.recordType-meta.xml
<RecordType>
    <fullName>Social_Navigation_Item</fullName>
    <active>true</active>
    <label>Social Navigation Item</label>
</RecordType>