force-app/main/default/objects/Experience_Enhancer_Configuration__c/validationRules/MainNavigationItemParentValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>MainNavigationItemParentValidation</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName == &apos;Main_Navigation_Item&apos; &amp;&amp;
Parent_EEC__c != null &amp;&amp;
Parent_EEC__r.RecordType.DeveloperName != &apos;Main_Navigation&apos; &amp;&amp;
Parent_EEC__r.RecordType.DeveloperName != &apos;Main_Navigation_Item&apos;</errorConditionFormula>
    <errorDisplayField>Parent_EEC__c</errorDisplayField>
    <errorMessage>A Main Navigation Item record can only be associated with a Main Navigation record or another Main Navigation Item record.</errorMessage>
</ValidationRule>