force-app/main/default/objects/Experience_Enhancer_Configuration__c/validationRules/MainOrSocialNavigationRecordCantBeChild.validationRule-meta.xml
<ValidationRule>
    <fullName>MainOrSocialNavigationRecordCantBeChild</fullName>
    <active>true</active>
    <errorConditionFormula>(
				RecordType.DeveloperName == &apos;Main_Navigation&apos; ||
				RecordType.DeveloperName == &apos;Social_Navigation&apos;
) &amp;&amp; Parent_EEC__c != null</errorConditionFormula>
    <errorDisplayField>Parent_EEC__c</errorDisplayField>
    <errorMessage>A Main Navigation or a Social Navigation record can never be a child record.</errorMessage>
</ValidationRule>