force-app/main/default/objects/Experience_Enhancer_Configuration__c/validationRules/ParentMandatoryForItemNavigationRecords.validationRule-meta.xml
<ValidationRule>
    <fullName>ParentMandatoryForItemNavigationRecords</fullName>
    <active>true</active>
    <errorConditionFormula>Parent_EEC__c == null &amp;&amp; (
				RecordType.DeveloperName == &apos;Main_Navigation_Item&apos;
				||
				RecordType.DeveloperName == &apos;Social_Navigation_Item&apos;
)</errorConditionFormula>
    <errorDisplayField>Parent_EEC__c</errorDisplayField>
    <errorMessage>Please associate the Navigation Item record to a Navigation or Navigation Item record.</errorMessage>
</ValidationRule>