force-app/main/default/objects/Experience_Enhancer_Configuration__c/validationRules/SocialNavigationItemParentValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>SocialNavigationItemParentValidation</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName == &apos;Social_Navigation_Item&apos; &amp;&amp;
Parent_EEC__c != null &amp;&amp;
Parent_EEC__r.RecordType.DeveloperName != &apos;Social_Navigation&apos; &amp;&amp;
Parent_EEC__r.RecordType.DeveloperName != &apos;Social_Navigation_Item&apos;</errorConditionFormula>
    <errorDisplayField>Parent_EEC__c</errorDisplayField>
    <errorMessage>A Social Navigation Item record can only be associated with a Social Navigation record or another Social Navigation Item record.</errorMessage>
</ValidationRule>