force-app/main/default/objects/Experience_Enhancer_Configuration__c/listViews/Navigation_Items_Level_2.listView-meta.xml
<ListView>
    <fullName>Navigation_Items_Level_2</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Parent_EEC__c</columns>
    <columns>URL__c</columns>
    <columns>Order__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>Level 2</value>
    </filters>
    <label>Navigation Items - Level 2</label>
</ListView>