force-app/main/default/objects/Experience_Enhancer_Configuration__c/listViews/Navigation_Level_0.listView-meta.xml
<ListView>
    <fullName>Navigation_Level_0</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>Level 0</value>
    </filters>
    <label>Navigations - Level 0</label>
</ListView>