force-app/main/default/objects/Experience_Enhancer_Configuration__c/listViews/Social_Navigation_Items.listView-meta.xml
<ListView>
    <fullName>Social_Navigation_Items</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Parent_EEC__c</columns>
    <columns>URL__c</columns>
    <columns>Icon_URL__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Experience_Enhancer_Configuration__c.Social_Navigation_Item</value>
    </filters>
    <label>Social Navigation Items</label>
</ListView>